update teamcity CI settings